fix: increase max-height of todo container for better visibility

--- a/src/App.css
+++ b/src/App.css
@@ -558,7 +558,7 @@ width: 110%;
 }
 
 .todo_containerInOrdine{
-  max-height: 300px;
+  max-height: 377px;
 }
 
 .todo_containerNoteDip{
